# be-big-dsa

./: .env.example  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  exceptions.py  middleware.py
app/features/reports/: __init__.py  spatial_ai_report.py  spatial_analysis_report.py  temporal_ai_report.py  temporal_analysis_report.py
app/features/spatial_complexity/: analyzer.py  dto.py  request.py  router.py  service.py
app/features/temporal_complexity/: __init__.py  analyzer.py  dto.py  request.py  router.py  service.py
app/shared/: __init__.py
app/shared/ai/: __init__.py  ai.py  client.py  service.py
app/shared/ast/: __init__.py  fingerprint.py  parser.py
app/shared/ast/value_objects/: __init__.py  normalized_code.py
app/shared/ast/visitors/: __init__.py  allocation_visitor.py  dinamic_growth_visitor.py  loop_visitor.py  recursion_visitor.py
app/shared/cache/: __init__.py  cache.py  client.py  mixin.py  service.py
